ingress-https.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: coupon-api-ingress
  namespace: coupon-app
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: "coupon-api-ip"
    networking.gke.io/managed-certificates: "coupon-api-cert"
spec:
  rules:
    - host: api.pos.thecouponbureau.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: coupon-api-pos-validation-sdk
                port:
                  number: 3000
